<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@color/White"
    android:weightSum="10"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/headPage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <TextView
            android:id="@+id/nomApp"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/century_regular"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"/>


        <View
            android:id="@+id/barre"
            android:layout_width="370dp"
            android:layout_height="1dp"
            android:layout_below="@id/nomApp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="#4D000000"/>

        <TextView
            android:id="@+id/welcomeUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcomeUser"
            android:fontFamily="@font/century_regular"
            android:layout_below="@id/barre"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp" />

        <ImageButton
            android:id="@+id/userBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/briefing"
            android:layout_below="@id/barre"
            android:layout_toRightOf="@id/welcomeUser"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/welcomeUser"
            android:layout_marginStart="160dp"
            android:contentDescription="@string/userbtn" />

        <ImageButton
            android:id="@+id/project1Home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/welcomeUser"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"/>

        <ImageButton
            android:id="@+id/project2Home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/project1Home"
            android:layout_alignBottom="@id/project1Home"
            android:layout_marginLeft="20dp"
            android:padding="10dp"/>

        <ImageButton
            android:id="@+id/project3Home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/project2Home"
            android:layout_alignBottom="@id/project2Home"
            android:layout_marginLeft="20dp"
            android:padding="10dp"/>

        <ImageButton
            android:id="@+id/project4Home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/project3Home"
            android:layout_alignBottom="@id/project3Home"
            android:background="@color/transparent"
            android:layout_marginLeft="20dp"
            android:padding="10dp"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/whatCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="What would you like to calculate ?"
            android:textColor="@color/black"
            android:fontFamily="@font/century_regular"
            android:textSize="20sp"
            android:layout_below="@id/project1Home"/>

        <Spinner
            android:id="@+id/choiceCalculate"
            android:layout_width="170dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_height="30dp"
            android:background="@drawable/border"
            android:entries="@array/choiceCalculate"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_below="@id/whatCalculate"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/middlePage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="500dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottomPage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <com.google.android.material.tabs.TabLayout

            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            app:tabIndicatorColor="#040404"
            app:tabTextAppearance="@style/tabTxt"
            android:layout_marginTop="5dp">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/simulate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/pay"
                android:text="@string/simulate"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/graph"
                android:text="@string/data"/>

        </com.google.android.material.tabs.TabLayout>

    </RelativeLayout>

</LinearLayout>